# media-server

./: .gitignore  BARRA_MINIATURAS.md  Cargo.toml  DEV_RELOAD_README.md  HOT_RELOAD_README.md  README.md  TESTE_HOTRELOAD_SUCESSO.md  TESTE_SUCESSO.md  VIDEO_PREVIEW_README.md  dev.sh  package-lock.json  package.json  run_terminal_server.sh  setup_terminal.sh  start_with_terminal.sh  tailwind.config.js  terminal_server.py  terminal_server_v2.py  test_video_preview.sh
public/css/: app.css  terminal.css  video-responsive.css
public/js/: app.js  dev-reload.js  search.js  terminal-fix.js  terminal.js  video-preview.js  viewer.js
src/: main.rs
src/controllers/: browse.rs  content.rs  dev.rs  download.rs  file.rs  mod.rs  search.rs  thumbs.rs  upload.rs  video_previews.rs
src/models/: config.rs  error.rs  fs.rs  media.rs  mod.rs  thumbnails.rs  video_previews.rs  watcher.rs
src/views/: mod.rs
templates/: base.html  browse.html  error.html  file.html  search.html
