[package]
name = "media-serve"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = [
    "fs",
    "compression-gzip",
    "trace",
    "cors",
] }
askama = "0.12"
askama_axum = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
infer = "0.16"
percent-encoding = "2"
time = { version = "0.3", features = ["formatting", "local-offset"] }
image = "0.25"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
anyhow = "1"
thiserror = "1"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
lazy_static = "1"
notify = "6"
async-stream = "0.3"
tokio-stream = "0.1"
futures = "0.3"
